Allow HTML content in toast messages; Refresh browser cache if enabled when loading a session file; Now there are more tabs in the settings panel, align the panel to the top of the screen to prevent the differing content tab heights from jumping the tab bar position around.

--- a/src/main.css
+++ b/src/main.css
@@ -1970,7 +1970,10 @@ td button { margin: 0.5rem; }
     margin: -1rem 1rem 0 1rem;
     min-width: 48%;
 }
-
+#exportSettingsPanel {
+    margin-top: 4rem;
+    max-height: calc(89vh - 4rem);
+}
 #exportSettingsPanel .disabled {
     pointer-events: none;
     user-focus: none;
